--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 
-  <!-- <app-simplehttp></app-simplehttp> -->
-  <app-you-tube-search></app-you-tube-search>
+  <app-simplehttp></app-simplehttp>
+  <!-- <app-you-tube-search></app-you-tube-search> -->
